# autoprep

./: README.md  pyproject.toml
docs/: Makefile  api_reference.rst  conf.py  index.rst  introduction.rst  requirements.rst  requirements.txt  usage.rst
docs/_build/doctrees/: api_reference.doctree  environment.pickle  index.doctree  introduction.doctree  requirements.doctree  usage.doctree
docs/_build/doctrees/source/: index.doctree  installation.doctree  introduction.doctree
docs/_build/doctrees/source/api/: data_processing.doctree  exploratory_analysis.doctree  model_testing.doctree  preprocessing.doctree  utils.doctree
docs/_build/doctrees/source/modules/: exploratory_analysis.doctree  model_testing.doctree  utils.doctree  (+1 more)
docs/_build/html/: .buildinfo  .buildinfo.bak  api_reference.html  genindex.html  index.html  introduction.html  objects.inv  py-modindex.html  requirements.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: api_reference.rst.txt  index.rst.txt  introduction.rst.txt  requirements.rst.txt  usage.rst.txt
docs/_build/html/source/: index.html  installation.html  introduction.html
src/: .gitignore  TEST_AUTOPREP.ipynb  prueba.ipynb  setup.py  tests.py
src/autoprep/: __init__.py  autoprep.py
src/autoprep_jonortega20/: __init__.py  autoprep.py
src/autopreps/: __init__.py  autoprep.py
src/autopreps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/data_processing/: __init__.py  data_processing.py  exploratory_analysis.py  model_testing.py  preprocessing.py  utils.py
(+23 files in other folders)
